# egc-compliance

./: .mcp.json  DEPLOYMENT.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/subagents/: compliance-analyst.md
agents/workflows/: compliance-report.md
commands/: check.md  report.md  scenarios.md
egc_compliance/: artifact_builder.py  audette_client.py  cli.py  scenario_engine.py
egc_compliance/data/: ashrae_901_2022.json
egc_compliance/report/templates/components/: dashboard.html.j2  explorer.html.j2  overview.html.j2  table.html.j2
egc_compliance/schemas/: building_model.json  simulation_result.json
egc_compliance/simulation/: runner.py
skills/egc-compliance/: SKILL.md
